# labo-ai

./: .gitignore  .vercelignore  README.md  index.html  package-lock.json  package.json  requirements-runtime.txt  tsconfig.electron.json  vercel.json  vite.config.ts
.github/workflows/: desktop-release.yml
apps/bootstrap-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/bootstrap-installer/src-tauri/capabilities/: default.json
apps/bootstrap-installer/src-tauri/src/: lib.rs  main.rs
docs/: hackathon-submission.md
electron/: ask-labo.test.ts  ask-labo.ts  atomic-runtime.test.ts  atomic-runtime.ts  chatgpt-session.test.ts  chatgpt-session.ts  desktop-state.test.ts  desktop-state.ts  desktop-updates.test.ts  desktop-updates.ts  generated-pytorch.test.ts  ipc-contract.ts  main.ts  openai-credentials.test.ts  openai-credentials.ts  preload.cts  runtime.test.ts  security.test.ts  security.ts
scripts/: agent-e2e.mjs  atomic_runtime.py  cdp-agent-e2e.mjs  demo-agent.mjs  desktop-smoke.mjs  install-labo-ai-linux.sh  install-labo-ai-macos.sh  install-labo-ai-windows.ps1  mac-sign.cjs  setup-runtime.mjs  sync-release-version.mjs
src/: App.agent.test.tsx  App.card-builder.test.tsx  App.catalog-presets.test.tsx  App.css  App.graph-editing.test.tsx  App.scss  App.shell-web.test.tsx  App.studios.test.tsx  App.test.tsx  App.tsx  App.workspaces-player.test.tsx  DesktopUpdateSettings.tsx  LaboMark.tsx  StudioSettingsModal.tsx  TokenizerStudio.tsx  architecture.test.ts  browser-api.ts  electron-api.d.ts  index.scss  main.tsx  studio-search.ts
src/core/: agentic-graph.ts  (+47 more)
(+101 files in other folders)
