[package]
name = "labo-ai-setup"
version = "0.1.34"
description = "Source-first installer and updater for LABO AI"
authors = ["Complexity-ML"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "labo_ai_setup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "labo-ai-setup"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
tempfile = "3"
zip = "2"
